samples/_failures_safe/1761354700_1755b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a02402b5.c: In function ‘main’:
./samples/SAFE/__tmp_a02402b5.c:146:5: error: expected declaration or statement at end of input
  146 |     size_t decompressed_size = decompress_rle(compressed_buf.data, compressed_buf.size, decompressed, sizeof(decompressed));
      |     ^~~~~~
